[package]
name = "nest-accessor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oauth2 = "4.3.0"
reqwest = {version = "0.11.17", features = ["json"]}
serde = {version = "1.0.160", features = ["derive"]}
serde_json = {version = "1.0.96"}
tokio = {version = "1.28.0", features = ["full"]}
paho-mqtt = "0.12.1"
